fix images problem and download Article